[tool.poetry]
name = "yatl"
version = "0.1.0"
description = "YAML Templating Language"
authors = ["Dan Hipschman"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/d5h-foss/yatl"
repository = "https://github.com/d5h-foss/yatl"
keywords = ["yaml", "template"]
documentation = "https://yatl.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
